[package]
name = "tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
crossbeam = "0.8.2"
log = "0.4.20"
simplelog = "0.12.1"
cpal = "0.15.2"
anyhow = "1.0.75"
mi-plaits-dsp = { git = "https://github.com/sourcebox/mi-plaits-dsp-rs.git", branch = "master" }
