[package]
name = "bl8-tui-rs"
version = "0.1.0"
edition = "2021"
authors = ["Corné Driesprong <corne@cp3.io>"]
description = "A terminal-based music tracker with vim-like keybindings using Mutable Instruments Plaits DSP as its sound engine."

[dependencies]
crossterm = "0.27.0"
crossbeam = "0.8.2"
log = "0.4.20"
simplelog = "0.12.1"
cpal = "0.15.2"
anyhow = "1.0.75"
mi-plaits-dsp = { git = "https://github.com/sourcebox/mi-plaits-dsp-rs.git", branch = "master" }
regex = "1"
